--- a/src/component/about/footer/Footer.module.css
+++ b/src/component/about/footer/Footer.module.css
@@ -13,6 +13,12 @@
     justify-content: center;
     flex-wrap: wrap;
   }
+
+  .Section1{
+    /* text-align: center; */
+    padding: 20px;
+    margin-left: 10px;
+  }
   
   /* Styling for Section2 */
   .Section2 {
@@ -21,8 +27,12 @@
     text-align: center; /* Center text and content inside */
     margin-top: 30px;
   }
+  .Name{
+    margin-left: 10px;
+  }
   .Line{
-    margin-top: 10px;
+    margin-top: 30px;
+    padding: 10px;
   }
   .Name3{
     color: #00d4ff;
@@ -80,4 +90,4 @@
     text-align: center;
     font-size: 14px;
   }
-  
+ 
