--- a/src/component/contactus/card/Card.module.css
+++ b/src/component/contactus/card/Card.module.css
@@ -8,13 +8,11 @@
   margin-top: 50px;
 }
 
-/* Left Section */
 .left {
   flex: 1 1 30%; /* Flexible width for responsiveness */
   box-shadow: #ccc;
 }
 
-/* Contact Card Styles */
 .contactCard {
   margin-bottom: 20px;
   padding: 15px;
@@ -44,13 +42,6 @@
   color: #1c1c1e;
 }
 
-/* Address Section */
-/* .ContactAdress {
-  display: flex;
-  margin-left:-8px;
-  margin-top: 30px;
- 
-}  */
 .ContactAdress{
   margin-top:40px;
   display: flex;
@@ -79,12 +70,12 @@
 .MailIcon {
   display: flex;
   align-items: center;
-  gap: 20px;
+  gap: 10px;
   margin: 20px;
 }
 
 .MailIcon h3 {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   font-weight: 600;
 }
 
@@ -234,32 +225,59 @@ textarea:focus::placeholder {
 }
 
 .map iframe {
-  width: 100%; /* Ensure the embedded content (e.g., iframe) spans full width */
-  height: 100%; /* Ensure the height of the embedded content matches the section */
-  border: none; /* Remove border for a cleaner look */
+  width: 100%; 
+  height: 100%;
+  border: none;
 }
-@media (max-width: 768px) {
+
+@media only screen and (max-width: 480px) { /* Small Mobile Screens */
   .container {
-    padding: 0 2%;
+    padding: 0 1rem;
   }
 
   .left, .right {
-    flex: 1 1 100%;
+    width: 100%;
+    padding: 10px;
   }
 
   .contactCard h2, .Righttitle {
-    font-size: 1.2rem;
-    text-align: center;
+    font-size: 1.1rem;
+  }
+  .ContactAdress{
+    margin-left: 10px;
+  }
+  .MailIcon {
+    margin: 10px;
+    gap: 8px;
+    font-size: 0.9rem;
   }
 
-  .formGroup {
-    flex: 1 1 100%;
+  .MailIcon h3 {
+    font-size: 1rem;
+  }
+
+  .mailIcon {
+    min-width: 30px;
+    height: 30px;
+    padding: 3px;
+   
+  }
+  .ContactNo{
+    margin-left: 10px;
+  }
+  .formGroup input, .formGroup textarea {
+    font-size: 0.9rem;
+    padding: 8px;
+  }
+
+  .submitButton {
+    font-size: 0.9rem;
+    padding: 10px;
   }
 
   .map {
-    margin-left: 34px;
-    height: 250px;
-    margin-top: 180px;
+    height: 290px;
+    width: 350px;
+    
   }
 }
-
