--- a/src/component/services/core/Core.module.css
+++ b/src/component/services/core/Core.module.css
@@ -2,6 +2,7 @@
 .Core {
   text-align: center;
   padding: 20px;
+  
 }
 
 .Word {
@@ -15,8 +16,10 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 15px;
-  margin-left: 30px;
-  margin-right: 30px;
+  /* margin-left: 30px;
+  margin-right: 30px; */
+  justify-content: center;
+  align-items: center;
 }
 
 .Section div {
