--- a/src/component/services/hero/Hero.module.css
+++ b/src/component/services/hero/Hero.module.css
@@ -106,7 +106,10 @@
         font-size: 12px;
         margin-top: 10px;
     }
-
+    .No2{
+        font-size: 12px;
+        margin-top: 10px;
+    }
     .Line1 {
         font-size: 20px;
         text-align: center;
